--- a/index.html
+++ b/index.html
@@ -11,11 +11,18 @@
     <div class="container">
         <div class="container-block"></div>
         <div class="container-name">To-Do List</div>
-        <img class="container-list" src="/images/Group34Str.svg" alt="сортировка"> 
+        <img class="container-list" src="images/Group34Str.svg" alt="сортировка"> 
         <div class="container-change">
             <input class="container-check" name="containercheck" type="text">
-            <img class="change" src="/images/Group56kre.svg" alt="выбор">
+            <img class="change" src="images/Group56kre.svg" alt="выбор">
         </div>
+        <ul class="items">
+            <li>почистить зубы</li>
+            <li>купить зубную пасту</li>
+            <li>умыться</li>
+            <li>выпить кофе</li>
+            <li>принять душ</li>
+        </ul>
         <div class="button"><img src="images/Group41dob.svg"></div>
     </div>
 
