--- a/index.html
+++ b/index.html
@@ -12,20 +12,15 @@
         <div class="container-block"></div>
         <div class="container-name">To-Do List</div>
         <img class="container-list" src="images/Group34Str.svg" alt="сортировка"> 
-        <div class="container-change">
-            <input class="container-check" name="containercheck" type="text">
-            <img class="change" src="images/Group56kre.svg" alt="выбор">
+        <div class="container-input">
+            <div class="container-change">
+                <input class="container-check" name="containercheck" type="text">
+                <img class="change" src="images/Group56kre.svg" alt="выбор">
+                <ul id="list"></ul>
+            </div>
+            <div class="button"><img src="images/Group41dob.svg"></div>
         </div>
-        <ul class="items">
-            <li>почистить зубы</li>
-            <li>купить зубную пасту</li>
-            <li>умыться</li>
-            <li>выпить кофе</li>
-            <li>принять душ</li>
-        </ul>
-        <div class="button"><img src="images/Group41dob.svg"></div>
     </div>
-
     <script src="script.js"></script>
 </body>
 </html>
