--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
             <div class="container-change">
                 <input class="container-check" name="containercheck" type="text">
                 <img class="change" src="images/Group56kre.svg" alt="выбор">
-                <ul id="list"></ul>
+                <ul class="list"></ul>
             </div>
             <div class="button"><img src="images/Group41dob.svg"></div>
         </div>
