--- a/index.html
+++ b/index.html
@@ -13,9 +13,9 @@
         <div class="container-name">To-Do List</div>
         <img class="container-list" src="images/Group34Str.svg" alt="сортировка"> 
         <div class="container-input">
-            <div class="container-change">
+            <div class="container-center">
                 <input class="container-check" name="containercheck" type="text">
-                <img class="change" src="images/Group56kre.svg" alt="выбор"> 
+                <div class="container-tasks"></div>
             </div>
             <div class="button"><img src="images/Group41dob.svg"></div>
         </div>
