--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <div class="container">
         <div class="container-block"></div>
         <div class="container-name">To-Do List</div>
-        <img class="container-list" src="images/Group34Str.svg" alt="сортировка"> 
+        <img class="container-list" src="images/StrDownGrey.svg" alt="сортировка"> 
         <div class="container-input">
             <div class="container-center">
                 <input class="container-check" name="containercheck" type="text">
